--- a/my.cnf
+++ b/my.cnf
@@ -7,6 +7,12 @@ collation-server=utf8mb4_unicode_ci
 max_connections=200
 max_allowed_packet=256M
 
+# 보안 설정
+local_infile=0
+skip-symbolic-links=1
+secure_file_priv=/var/lib/mysql-files
+# bind-address=127.0.0.1  # 로컬만 허용하려면 주석 해제
+
 # 성능 설정
 innodb_buffer_pool_size=1G
 innodb_log_file_size=256M
@@ -18,9 +24,10 @@ log_error=/var/log/mysql/error.log
 slow_query_log=1
 slow_query_log_file=/var/log/mysql/slow-query.log
 long_query_time=2
+log_error_verbosity=2
 
 # 타임존 설정
-default-time-zone='+09:00'
+default-time-zone='Asia/Seoul'
 
 # SQL 모드
 sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
